fix: add max width to images to prevent overflow on screen sizes over 1500px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ h1, h2 {
     position: absolute;
     vertical-align: top;
     margin: 30px 0 30px 30px;
+    max-width: 300px;
     width: 20%;
     height: auto;
 }
@@ -290,6 +291,7 @@ h3 {
 .design-image {
     height: auto;
     width: 80%;
+    max-width: 300px;
 }
 
 /* Palette Section in Design Page */
@@ -299,6 +301,7 @@ h3 {
 
 #regular-palette {
     width: 80%;
+    max-width: 800px;
     height: auto;
     margin: 0 auto;
     display: block;
